<?xml version="1.0"?>
<package format="2">
  <name>towr_core</name>
  <version>1.1.0</version>
  <description>
    The core algorithm of the Trajectory Optimizer for Walking Robots (TOWR).
    <p>
    This algorithm is independent of the robot, the NLP solver and ROS. The
    user specifies the kinematics and dynamics of the robot (monoped, biped,
    quadruped,...) a desired goal state, as well as which 
    <a href="http://wiki.ros.org/ifopt">Ifopt</a> 
    solver to use and this algorithm generates the corresponding motion-plan.
    </p>
  </description>

  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/ethz-adrl/towr</url>
  <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ifopt_core</depend>
 
</package>
