<?xml version="1.0"?>

<package format="2">
  <name>towr_examples</name>
  <version>1.0.0</version>
  <description>
    An example of using 
    <a href="http://wiki.ros.org/towr">TOWR</a>
    together with the NLP solver 
    <a href="https://projects.coin-or.org/Ipopt">Ipopt</a>
    to generate a legged robot motion trajectory.
  </description>

  <author>Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">https://github.com/ethz-adrl/towr</url>
  <url type="bugtracker">https://github.com/ethz-adrl/towr/issues</url>

  <build_depend>ifopt_ipopt</build_depend>
  <build_depend>towr</build_depend>

</package>
