<?xml version="1.0"?>
<package format="2">
  <name>towr_ros</name>
  <version>1.1.0</version>
  <description>
    The ROS dependent parts of TOWR.
    <p>
    Formulates a variety
    of robots and terrains and a keyboard user interface to switch between them.
    It also visualizes the produced motions plan in rviz using
    <a href="http://wiki.ros.org/xpp">xpp</a>.
    </p> 
  </description>

  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/ethz-adrl/towr</url>
  <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
 
  <depend>xpp_states</depend>
  <depend>xpp_msgs</depend>
  
  <depend>towr_core</depend>
  <depend>ifopt_ipopt</depend>
  <depend>ifopt_snopt</depend>
</package>
