<?xml version="1.0"?>
<package format="2">
  <name>towr_ros</name>
  <version>1.2.2</version>
  <description>
    A ROS dependent wrapper for
    <a href="https://github.com/ethz-adrl/towr">towr</a>.
    Adds a keyboard user interface to set different goal states, motions
    and robots and visualizes the produced motions plan in rviz using
    <a href="https://github.com/leggedrobotics/xpp">xpp</a>.
  </description>

  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/ethz-adrl/towr</url>

  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>libncurses-dev</depend>
  
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>xpp_states</depend>
  <depend>xpp_msgs</depend>
  <depend>towr</depend>
  
  <exec_depend>xterm</exec_depend>
  <exec_depend>xpp_vis</exec_depend>
  <exec_depend>xpp_hyq</exec_depend>
  <exec_depend>xpp_quadrotor</exec_depend>
</package>
